@@ -1,8 +1,8 @@
 name    = Dist-Data
-author  = Torsten Raudssus <torsten@raudss.us> L<http://raudss.us/>
+author  = Torsten Raudssus <torsten@raudssus.de> L<https://raudss.us/>
 license = Perl_5
-copyright_holder = DuckDuckGo, Inc. L<http://duckduckgo.com/>
-copyright_year   = 2012
+copyright_holder = Torsten Raudssus <torsten@raudssus.de> L<https://raudss.us/>
+copyright_year   = 2024
 
 [@Author::GETTY]
 no_changelog_from_git = 1
